tests/multiplatform/multiplatform.exp
Error --------------------------------------------------------------------------- cjs_conformance_errors.android.js:1:16

Cannot conform to common interface module because exports [1] is incompatible with string [2] in property `default`.
Read the docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.
[incompatible-type]

   cjs_conformance_errors.android.js:1:16
   1| module.exports.foo = 1;
                     ^^^

References:
   cjs_conformance_errors.android.js
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   cjs_conformance_errors.js.flow:1:25
   1| declare module.exports: string;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------- cjs_conformance_errors.ios.js:1:18

Cannot conform to common interface module because number [1] is incompatible with string [2] in property `default`. Read
the docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.
[incompatible-type]

   cjs_conformance_errors.ios.js:1:18
   1| module.exports = 1;
                       ^ [1]

References:
   cjs_conformance_errors.js.flow:1:25
   1| declare module.exports: string;
                              ^^^^^^ [2]


Error --------------------------------------------------------------------------- esm_conformance_errors.android.js:1:16

Cannot conform to common interface module because property `a` is missing in self [1] but exists in common
interface [2]. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [prop-missing]

   esm_conformance_errors.android.js:1:16
   1| export default 3;
                     ^

References:
   esm_conformance_errors.android.js:1:1
   1| export default 3;
      ^^^^^^^^^^^^^^^^^ [1]
   esm_conformance_errors.js.flow
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------- esm_conformance_errors.ios.js:1:18

Cannot conform to common interface module because number [1] is incompatible with string [2] in property `a`. Read the
docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.
[incompatible-type]

   esm_conformance_errors.ios.js:1:18
   1| export const a = 3;
                       ^ [1]

References:
   esm_conformance_errors.js.flow:1:25
   1| declare export const a: string;
                              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------- missing_one_impl.js.flow:0:1

Cannot resolve platform-specific implementation module `./missing_one_impl.android`. All platform-specific
implementations must exist for this interface. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform [cannot-resolve-module]



Error ----------------------------------------------------------------------------------------- shadowing.android.js:1:1

Cannot conform to common interface module because property `myValue` is missing in self [1] but exists in common
interface [2]. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [prop-missing]

   shadowing.android.js:1:1
   1|
       [1]

References:
   shadowing.js.flow
   ^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- shadowing.ios.js:1:1

Cannot conform to common interface module because property `myValue` is missing in self [1] but exists in common
interface [2]. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [prop-missing]

   shadowing.ios.js:1:1
   1|
       [1]

References:
   shadowing.js.flow
   ^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------ shadowing_cjs.android.cjs:1:1

Cannot conform to common interface module because property `myValue` is missing in self [1] but exists in common
interface [2]. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [prop-missing]

   shadowing_cjs.android.cjs:1:1
   1|
       [1]

References:
   shadowing_cjs.js.flow
   ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- shadowing_cjs.ios.cjs:1:1

Cannot conform to common interface module because property `myValue` is missing in self [1] but exists in common
interface [2]. Read the docs on Flow's multi-platform support for more information:
https://flow.org/en/docs/react/multiplatform. [prop-missing]

   shadowing_cjs.ios.cjs:1:1
   1|
       [1]

References:
   shadowing_cjs.js.flow
   ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------- test_interface_import.js:8:2

Cannot cast `o1` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test_interface_import.js:8:2
   8| (o1: empty); // error
       ^^

References:
   test_interface_import.js:6:17
   6| declare var o1: MyType;
                      ^^^^^^ [1]
   test_interface_import.js:8:6
   8| (o1: empty); // error
           ^^^^^ [2]


Error ------------------------------------------------------------------------------------ test_interface_import.js:10:8

Cannot resolve module `./allow_no_interface`. [cannot-resolve-module]

   10| import './allow_no_interface'; // error
              ^^^^^^^^^^^^^^^^^^^^^^



Found 11 errors
